Working on a manual / tutorial.