@@ -17,7 +17,7 @@ level of completion on this project. In the meantime, clone this repository and 
 
 To generate data, execute the JAR adding any other JDBC drivers to the classpath. An example is below that includes the sqlite jar:
 
-    $  java  -Xverify:none -cp '.;lib/*;target/uberjar/blutwurst-0.2.0-SNAPSHOT-standalone.jar' blutwurst.core [args]
+    $  ./bin/blutwurst.cmd [args]
 
 This is, admittedly, not a great user experience. We will be developing wrapper scripts to make this nicer.    
 
@@ -25,13 +25,13 @@ This is, admittedly, not a great user experience. We will be developing wrapper 
 
 In order to get a full list of the arguments supported by this application, run the following command:
 
-    $ java -jar blutwurst.jar -h
+    $ ./bin/blutwurst -h
 
 ## Examples
 
 Imagine you have a [Derby](https://db.apache.org/derby/) database on your local machine. Running a command like so:
 
-    java -cp '.;lib/*;blutwurst-0.3.0-standalone.jar' blutwurst.core --connection-string 'jdbc:derby:test.db' --format csv --directory mydata 
+    ./bin/blutwurst.cmd --connection-string 'jdbc:derby:test.db' --format csv --directory mydata 
 
 Will cause Blutwurst to start up, connect to Derby, scan the tables, generate data and export it as a CSV file per 
 table in the `mydata` directory. This assumes that you have permissions to `test.db` and that the JAR files for the Derby client
@@ -39,7 +39,7 @@ are in the `lib` folder.
 
 There are a number of other options. Running
 
-    java -cp '.;lib/*;blutwurst-0.3.0-standalone.jar' blutwurst.core --help
+    ./bin/blutwurst.cmd --help
 
 Will print out a list of options. Please see the [manual](doc/intro.md) for a more comprehensive overview.
 
